[tool.poetry]
name = "cosmosid_cli"
version = "2.1.4"
description = "Command line interface (CLI) and Python 3 client library for interacting with the CosmosID API"
authors = ["CosmosID <support@cosmosid.com>"]
readme = "README.md"
license = "MIT"

packages = [
  { include = "cosmosid" }
]
include = ["README.md"]

homepage = "https://www.cosmosid.com"
documentation = "https://docs.cosmosid.com"
repository = "https://github.com/CosmosID/cosmosid-cli"

keywords = ["cosmosID", "cosmosid_cli","cosmosid-cli" ,"cosmos"]

classifiers = [
    "Environment :: Console"
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/CosmosID/cosmosid-cli/issues"
Changelog = "https://github.com/CosmosID/cosmosid-cli/blob/master/CHANGELOG.md"

[[tool.poetry.source]]
name = 'cosmosid_private_pip'
url = 'https://registry.cosmosid.com/repository/pypi/simple/'
secondary = true

[tool.poetry.dependencies]
python = ">=3.6, <4"
requests = "^2.27.1"
boto3 = "^1.21.28"
s3transfer = "^0.5.2"
cliff = "^3.10.1"
concurrent-log-handler = "^0.9.20"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
isort = "^5.10.1"
pytest = "^7.1.1"
pytest-cov = "^3.0.0"
pylint = "^2.12.2"
pre-commit = "^2.17.0"
debugpy = "^1.5.1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88

[tool.poetry.scripts]
cosmosid = "cosmosid.cli:main"

[tool.poetry.plugins."cosmosid"]
files = "cosmosid.command:Files"
runs = "cosmosid.command:Runs"
analysis = "cosmosid.command:Analysis"
upload = "cosmosid.command:Upload"
reports = "cosmosid.command:Reports"
artifacts = "cosmosid.command:Artifacts"
